--- a/Changes
+++ b/Changes
@@ -3,30 +3,32 @@ Revision history for Perl extension WWW::Mechanize
 1.19_01 Mon Aug  7 21:01:39 EDT 2006
 
         [ENHANCEMENTS]
-        * Add new Do-What-I-Mean submit_form() option. 
+        * Add new Do-What-I-Mean submit_form() option.
             $mech->submit_form(
-                with_fields => \%data 
+                with_fields => \%data
             );
          That expresses that you want to select the first form contains all
          fields in \%data, and then submit the data to that form. See the docs
-         for form_with_fields() and submit_form() for details. 
+         for form_with_fields() and submit_form() for details.
          (Mark Stosberg, inspired by RT#6100)
 
-        [BUG FIXES] 
-        * The behavior of clone() now copies over the cookie jar,
-          which is probably what you expected it did in the first place.  This
-          fixes bug RT#13541 filed against Test::WWW::Mechanize, which was using
-          clone() internally. (Mark Stosberg)
+        [BUG FIXES]
+        * The behavior of clone() now copies over the cookie jar, which
+        is probably what you expected it did in the first place.
+          This fixes bug RT#13541 filed against Test::WWW::Mechanize,
+          which was using clone() internally. (Mark Stosberg)
 
-        * The correct URL is returned after redirecting. This a regression from 1.04
-          and was reported as RT#9059, RT#12882, and RT#12786.  The documentation 
-          about this has also been clarified that we return A URI object, but that
-          it stringifies to the URI itself. 
+        * The correct URL is returned after redirecting. This a regression
+          from 1.04 and was reported as RT#9059, RT#12882, and RT#12786.
+          The documentation about this has also been clarified that we
+          return a URI object, but that it stringifies to the URI itself.
 
         [DOCUMENTATION]
         * Fixed a misleading parm in the constructor.
-        * Document the return value of set_visible (RT#6071, MJD, Mark Stosberg)
-        * Document that form_name and form_number return an HTML::Form object (Mark Stosberg)
+        * Document the return value of set_visible (RT#6071, MJD,
+          Mark Stosberg)
+        * Document that form_name and form_number return an HTML::Form
+          object (Mark Stosberg)
 
         [INTERNALS]
         * Made lots of little cleanups based on Perl::Critic
