--- a/lib/WWW/Mechanize/Cookbook.pod
+++ b/lib/WWW/Mechanize/Cookbook.pod
@@ -12,7 +12,7 @@ the L<libwww-perl> distribution.
 
 =head1 BASICS
 
-=head2 Create a mech
+=head2 Launch the WWW::Mechanize browser
 
     use WWW::Mechanize;
 
@@ -41,59 +41,13 @@ memory issues on large files.
     $mech->get( "http://www.cpan.org/src/stable.tar.gz",
                 ":content_file" => "stable.tar.gz" );
 
-=head2 Fetch a page with credentials
+=head2 Fetch a password-protected page
 
-Mech's C<credentials()> method comes in two flavors.  The first one is
-identical to that of L<LWP::UserAgent>, since WWW::Mechanize is a
-subclass. It takes four arguments: the base, realm, user, and
-password.
+Generally, just call C<credentials> before fetching the page.
 
-    my $url= 'http://10.11.12.13/password.html';
-    my $mech = WWW::Mechanize->new( autocheck => 1 );
-    $mech->credentials(
-        '10.11.12.13:80',
-        'ABCDEF',
-        'admin' => 'password'
-    );
-    $mech->get( $url );
-    print $mech->content();
-
-The second form takes just the username and password. They will be
-passed to all sites and all realms requesting authentication (this is
-done by specializing the L<LWP::UserAgent> C<get_basic_credentials()>
-method). 
-
-  my $url = 'http://10.11.12.13/password.html';
-    my $mech = WWW::Mechanize->new( autocheck => 1 );
     $mech->credentials( 'admin' => 'password' );
-    $mech->get( $url );
+    $mech->get( 'http://10.11.12.13/password.html' );
     print $mech->content();
-
-If you intend to visit multiple sites requiring authentication then
-call C<credentials> again with the new username and password before
-accessing each new site (unless you use the same username and password
-there as before).  This simplified form of C<credentials> will work in
-every case except when you are accessing a dynamically determined site
-that could be any of a number of sites requiring different
-credentials.
-
-"Normal" browsers authenticate in two steps: they try to fetch the
-resource and get a 401 response that contains the challenge (which has
-the realm information). They ask the user for the name and password,
-which they then use to request the resource again. They save that
-information for future accesses to the same realm. The realm helps the
-user agent keep things straight on the user side, and the server
-doesn't really care about it otherwise. Sometimes you'll need to pull
-the auth method from the challenge, but usually it's just "Basic".
-The Mech browser works the same way, by looking for a 401 before
-deciding whether it has credentials it can send back for another try.
-
-If you want to do it in one step (so you don't get the 401 at all),
-you stick the "Authorization" header in the initial request. It
-makes no difference to the server that you don't know the realm
-name. With L<HTTP::Request> you just add the header to the request. In
-WWW::Mechanize, you can use the C<add_header()> method. The HTTP
-specification (RFC 2616) explains the format of the Authorization header.
 
 =head1 LINKS
 
@@ -118,8 +72,10 @@ Find all links that have the word "download" in them.
 Use Abe Timmerman's L<WWW::CheckSite>
 L<http://search.cpan.org/dist/WWW-CheckSite/>
 
-=head1 AUTHOR
+=head1 AUTHORS
 
 Copyright 2005 Andy Lester C<< <andy@petdance.com> >>
+
+Later contributions by Peter Scott, Mark Stosberg and others.
 
 =cut
