--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 Revision history for Perl extension WWW::Mechanize
 
-1.20
+        [ENHANCEMENTS]
+        * If Compress::Gzip is installed, gzipped content is now
+          accepted and transparently decoded. No additional syntax needed!
+          This should save time and bandwidth in a number of cases. 
+          (Mark Stosberg)
+
+1.20   Sat Aug 19 09:09:08 EDT 2006
+
         [ENHANCEMENTS]
         * Added new two-argument form of credentials() method.
           $mech->credentials($username, $password);
