--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension WWW::Mechanize
 
-1.21_02
+1.21_02 Wed Oct  4 13:14:30 CDT 2006
 
 [ENHANCEMENTS THAT MAY BREAK YOUR CODE]
 
