--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Perl extension WWW::Mechanize
 
 NEXT
 
+[FIXES]
+*   $mech->content( type => 'text' ) was not freeing memory.
+
 [INTERNALS]
 *   Made the order of parms to $mech->content() not relevant.
 
