Added a test for the fields like opt[name]

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension WWW::Mechanize
 
+1.22        Thu Mar  1 22:53:23 CST 2007
+
+[INTERNALS]
+Added new tests.
+
+
 1.21_04     Sat Oct  7 21:35:42 CDT 2006
 
 [FIXES]
