--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for WWW::Mechanize
 
-NEXT
-
+1.30        Thu May 24 21:31:10 CDT 2007
+========================================
 [DOCUMENTATION]
 *   Minor doc fixes.  Thanks David Steinbrunner.
 
