--- a/Changes
+++ b/Changes
@@ -9,6 +9,10 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 NEXT
+========================================
+[DOCUMENTATION]
+Fixed internal links.
+
 
 1.36        Tue Mar 11 00:52:53 CDT 2008
 ========================================
@@ -21,7 +25,6 @@ that I'm now putting on the seat belts for them.
 You can now specify not to set up the proxy, if there is one.  The
 proxy causes problems for Crypt::SSLeay.  For details see:
 http://code.google.com/p/www-mechanize/issues/detail?id=39
-
 
 
 1.34        Mon Dec 10 00:30:39 CST 2007
