--- a/Changes
+++ b/Changes
@@ -8,7 +8,7 @@ http://code.google.com/p/www-mechanize/issues/list
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
-1.49_01
+1.49_01     Sat Sep 27 23:50:04 CDT 2008
 ========================================
 [FIXES]
 I do believe we are on the way to having all the encoding problems
@@ -18,12 +18,9 @@ ironed out.  This version incorporates a patch from here:
 
 and tests from Miyagawa's WWW::Mechanize::DecodedContent
 
-    http://search.cpan.org/~miyagawa/WWW-Mechanize-DecodedContent-0.01/
+    http://search.cpan.org/dist/WWW-Mechanize-DecodedContent/
 
 to finally fix this.
-
-
-
 
 
 [DOCUMENTATION]
