--- a/Changes
+++ b/Changes
@@ -8,6 +8,12 @@ http://code.google.com/p/www-mechanize/issues/list
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
+NEXT
+========================================
+[FIXES]
+Makefile.PL explicitly requires 5.8.0.
+
+
 1.51_01     Thu Nov  6 15:13:03 CST 2008
 ========================================
 [FIXES]
