--- a/Changes
+++ b/Changes
@@ -16,6 +16,8 @@ Makefile.PL explicitly requires Perl 5.8.0.
 URI.pm has to be version 1.36 or else URIs don't get encoded
 correctly.
 
+LWP has to be 5.819 or we have encoding problems.
+
 
 1.51_01     Thu Nov  6 15:13:03 CST 2008
 ========================================
