--- a/Changes
+++ b/Changes
@@ -8,7 +8,7 @@ http://code.google.com/p/www-mechanize/issues/list
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
-NEXT
+1.51_03     Thu Nov 20 11:05:49 CST 2008
 ========================================
 [FIXED]
 The $mech->clone() method was not passing the cookie jar to its
